<package>
 <name> joint_state_estimator </name>
  <version>0.1.0</version>
  <description>
    Kalman filter for estimating joint velocities and accelerations from joint position encoder measurements.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/dumbo_joint_state_estimator</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>bfl</build_depend>
  <build_depend>control_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>bfl</run_depend>
  <run_depend>control_msgs</run_depend>

</package>

